--- a/Style.css
+++ b/Style.css
@@ -170,10 +170,11 @@ body {
 
 /* Добавляем отступ для контейнера с кнопками */
 .button-container {
-    margin-top: 60px; /* Отступ сверху от карточки */
+    margin-top: 40px; /* Отступ сверху от карточки */
     display: flex;
-    justify-content: center;
-    gap: 20px; /* Отступ между кнопками */
+    flex-direction: column; /* Меняем направление на вертикальное */
+    align-items: center; /* Центрируем кнопки по горизонтали */
+    width: 100%; /* Задаем ширину контейнера для кнопок */
 }
 
 /* Стиль для кнопок */
